AIOps/aiops-engine/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiops-engine
  namespace: techx-tf3
  labels:
    app: aiops-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiops-engine
  template:
    metadata:
      labels:
        app: aiops-engine
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: engine
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        image: 197826770971.dkr.ecr.ap-southeast-1.amazonaws.com/tf-2-ai-engine:IF-v60
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /readyz
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: aiops-engine
  namespace: techx-tf3
spec:
  selector:
    app: aiops-engine
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
