AIOps/aiops-engine/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiops-engine-ingress
  namespace: techx-tf3
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /readyz
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /remediation
        pathType: Prefix
        backend:
          service:
            name: aiops-engine
            port:
              number: 80
